bug 791531 proxy callback on wrong thread after pac load r=biesi